Build package.json

--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "lint-ls",
   "version": "0.1.0",
   "description": "Linter for LiveScript",
+  "author": {
+    "name": "Aya Morisawa",
+    "url": "https://github.com/AyaMorisawa"
+  },
+  "homepage": "https://github.com/AyaMorisawa/lint-ls",
+  "bugs": "https://github.com/AyaMorisawa/lint-ls/issues",
   "license": "MIT",
   "main": "./lib/",
   "bin": {
@@ -10,6 +16,10 @@
   "scripts": {
     "test": "gulp test",
     "build": "gulp build"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/AyaMorisawa/lint-ls.git"
   },
   "dependencies": {
     "LiveScript": "1.3.1",
