--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   },
   "devDependencies": {
     "gulp": "3.8.11",
-    "gulp-livescript": "2.3.0"
+    "gulp-livescript": "2.3.0",
+    "gulp-mocha": "2.0.1",
+    "chai": "2.2.0"
   }
 }
