Use get-tuple package

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   },
   "dependencies": {
     "LiveScript": "1.3.1",
-    "prelude-ls": "1.1.1"
+    "prelude-ls": "1.1.1",
+    "get-tuple": "0.0.1"
   },
   "devDependencies": {
     "gulp": "3.8.11",
